--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+target/
+task-api-db/target/
+task-api-server/target/
